ft(profile): Update profile
this creates the endpoint needed to update a user's profile
[finishes  #167727458]
